# xopr-gline

./: .gitignore  HITL.py  README.md  empirical.py  main.py  pyproject.toml
data/: glacier_to_radarframe_ids.geojson
notebooks/: 01_search_flight_lines.py  02_detect_grounding_lines.py  bulk_processing_gline.ipynb  emperical_grounding_point.ipynb  emperical_grounding_point_grounding_zone_comp.ipynb  helheim_example_20080730.ipynb  helheim_example_20080730_01_005.ipynb  petermann_grounding_zone_comp.ipynb  petermann_grounding_zone_comp_merge_frames.ipynb
src/xopr_gline/: __init__.py  empirical.py  geospatial.py  xopr_utils.py
src/xopr_gline/.ipynb_checkpoints/: xopr_utils-checkpoint.py
tests/: test_empirical.py  test_geospatial.py
